Remove blueprint from inmemorydb
This is a very simple component, convert it to OSGi DS and also add
Guice annotations.

Change-Id: I3a646569c5deb6052c3937f5a5c070790cfdd84a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>